@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Size of the Orthanc static binaries are reduced by compressing ICU data
+* Fix issue #136 (C-Find request fails when found DICOM file does not have certain tags)
 * Fix issue #138 (POST to modalities/{name} accepts invalid characters)
 
 
